# Qbotics-Labs-Internship

./: .gitignore  .gitmodules  README.md  Readme.md  Readme.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
diff_drive_gazebo/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
diff_drive_gazebo/docs/: chapter01_constructing_main_urdf.md  chapter02_simple_laser_scanner.md  chapter03_rivz_config.md  references.txt  section01_constructing_main_urdf.md  section02_simple_laser_scanner.md  section03_adding_velodyne_lidar.md  section04_adding_inertial_measurement_unit.md  section05_diff_drive_gazebo_plugin.md  section06_rivz_config.md
diff_drive_gazebo/src/m2wr_description/: CMakeLists.txt
diff_drive_gazebo/src/m2wr_description/launch/: custom_teleop_twist_keyboard.launch
diff_drive_gazebo/src/m2wr_description/plugins/: PLUGINFILE.cc
diff_drive_gazebo/src/m2wr_description/rviz_configurations/: state03.rviz  state04_with_lidar_and_laser_scan.rviz  state05_lidar_laser_scanner_imu.rviz  temp.rviz
diff_drive_gazebo/src/m2wr_description/rviz_fun/: state01.rviz  state02.rviz  state04.rviz  state04_with_lidar.rviz
diff_drive_gazebo/src/m2wr_description/urdf/: laz_rot_lidar.xacro  lidar_VLP-16.urdf.xacro  m2wr.gazebo  m2wr.xacro  macros.xacro  materials.xacro
diff_drive_gazebo/temp_docs/: chapter01_constructing_main_urdf.md  doc01_constructing_the main_urdf.md
diff_drive_webots/docs/: Section01_basic_webots_functionality.md  Section02_webots_nodes.md  Section03_webots_appearance.md  Section04_webots_compound_shapes.md  (+2 more)
temp_docs/: doc01.md
(+70 files in other folders)
